se corrigieron faltas de ortografia en index

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="conteiner_intro">   
                 <h2>Intro</h2>      
                 <p class="texto_intro">
-                    Si echamos la vista atrás a los sesenta años de historia de CP Cultivo hay una cosa que llama la atención: el gran número de innovaciones que dieron lugar en nuestra empresa. Esta siempre ha sido la motivación principal, una empresa que ha sido y sigue siendo familiar. Nuevas variedades que han conducido a un avance en el mercado e innovaciones que han sido adoptadas por el cultivo, el comercio y el marketing. Y CP Cultivo sigue siendo una empresa que prefiere mirar al futuro en vez de al pasado.
+                    Si echamos la vista atrás a los sesenta años de historia de CP Cultivo hay una cosa que llama la atención: el gran número de innovaciones que dieron lugar en nuestra empresa. Esta siempre ha sido la motivación principal, una empresa que continua siendo familiar. Nuevas variedades que han conducido a un avance en el mercado e innovaciones adoptadas por el cultivo, el comercio y el marketing. CP Cultivo sigue siendo una empresa que prefiere mirar al futuro.
                     </p>
                 <button class="boton_intro"><a href="./index2.html">Conocenos</a></button> 
             </div>
@@ -82,7 +82,7 @@
         <section class="contacto">
             <div class="container_intro_contacto">
                 <h2>Contactanos</h2>
-                <p>Si querés información sobre cualquera de nuestros productos, <br>te brindamos a continuación todos nuestros medios para comunicarse con nosotros.</p>
+                <p>Si querés información sobre cualquera de nuestros productos, <br>te brindamos a continuación todos nuestros medios para comunicarte.</p>
             </div>
             <div class="contacto_detalle">
                 <h4>Dirección</h4>
