--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
         </section>
         <section class="intro">
             <h2 class="titulo_intro">CP colorea el futuro</h2>
-            <p class="texto_intro">Combinando la experiencia que hemos acumulado durante más de 60 años con nuestro profundo conocimiento del mercado, las relaciones a largo plazo y la continuidad son extremadamente importantes para nosotros. Esto no solo se aplica a nuestro personal, sino también a nuestros clientes y socios en la cadena de suministro.</p>
+            <p class="texto_intro">Combinando la experiencia que hemos acumulado durante más de sesenta años con nuestro profundo conocimiento del mercado, las relaciones a largo plazo y la continuidad son extremadamente importantes para nosotros. Esto no solo se aplica a nuestro personal, sino también a nuestros clientes y socios en la cadena de suministros.</p>
         </section>
         <div class="historia">
             <h2 class="titulo_historia">Nuestra Historia</h2>
@@ -52,7 +52,7 @@
         <div class="img_vision"></div>
         <div class="vision">
             <h2 class="titulo_vision">Nuestra Visión</h2>
-            <p class="texto_vision">A partir de una mejora e innovación de primera calidad, nuestra responsabilidad es ir un paso por delante de los avances en el sector de los crisantemos y dar forma a estos desarrollos respetando a la naturaleza.</p>
+            <p class="texto_vision">A partir de una mejora e innovación de primera calidad, nuestra responsabilidad es ir un paso por delante de los avances en el sector de los crisantemos y dar forma a estos desarrollos respetando la naturaleza.</p>
         </div>
         <div class="valores">
             <h2 class="titulo_valores">Nuestos Valores</h2>
@@ -60,12 +60,12 @@
                 <div class="card_valores">
                     <i class="fa-solid fa-file-signature"></i>
                     <h3>Transparecia</h3>
-                    <p>A la hora de brindar seguridad en todos nuestros procesos, brindamos documentación pertinente y una estrecha comunicación con nuestros clientes/provedores.</p>
+                    <p>A la hora de brindar seguridad en todos nuestros procesos, brindamos documentación pertinente y una estrecha comunicación con nuestros clientes/proveedores.</p>
                 </div>
                 <div class="card_valores">
                     <i class="fa-solid fa-handshake-simple"></i>
                     <h3>Lealtad</h3>
-                    <p>Nuestros clientes y provedores son nuestro mas preciados aliados: sin ellos no seriamos lo que somos. Por lo tanto, en CP Cultivo brindamos un trato cercano para hacer de nuestra realición perdurable en el tiempo.</p>
+                    <p>Nuestros clientes y proveedores son nuestros más preciados aliados: sin ellos no seríamos lo que somos. En CP Cultivo brindamos un trato cercano para hacer nuestra relación perdurable en el tiempo.</p>
                 </div>
                 <div class="card_valores">
                     <i class="fa-solid fa-file-circle-check"></i>
