--- a/index3.html
+++ b/index3.html
@@ -33,8 +33,8 @@
             <h1>Productos</h1>
         </header>
         <section class="intro">
-            <h2 class="titulo_intro">Nuestras Flores</h2>
-            <p class="texto_intro">Las variedades nuevas ayudan a mantener vivo el interés del consumidor internacional por el crisantemo. Ampliamos constantemente el surtido con variedades nuevas. Unas variedades que han pasado a ser unos de los crisantemos más cultivados y vendidos del pais.</p>
+            <h2 class="titulo_intro">Nuestras Variedades</h2>
+            <p class="texto_intro">Las variedades nuevas ayudan a mantener vivo el interés del consumidor por el crisantemo. Ampliamos constantemente el surtido con variedades nuevas. Algunas de ellas han pasado a ser unos de los crisantemos más cultivados y vendidos del país.</p>
         </section>
         <div class="galeria_productos_conteiner">
             <div class="grid_item_productos1">
@@ -59,7 +59,7 @@
         </section>
         <div class="galeria_otros_conteiner">
             <div class="grid_item_otros1">
-                <p>Nylon</p>
+                <p>Polietileno</p>
             </div>
             <div class="grid_item_otros2">
                 <p>Conos</p>
@@ -73,7 +73,7 @@
                 <div class="card">
                     <i class="fa-solid fa-truck-plane"></i>
                     <h3>Envíos a todo el país</h3>
-                    <p class="texto_h3">Envíos a todo el país de encomiendas con entregas en 24/48hs a las principales ciudades del país.</p>
+                    <p class="texto_h3">Envíos por encomiendas en 24/48hs a las principales ciudades del país.</p>
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-phone"></i>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-clock"></i>
-                    <h3>Envíos en el día o en 48 hs hábiles</h3>
+                    <h3>Envíos en el día o en 48 hs.</h3>
                     <p class="texto_h3">Si el pedido se realiza antes de las 13 hs, llegará al día siguiente. Si no dentro de las 48hs.</p>
                 </div>
             </div>   
