--- a/index4.html
+++ b/index4.html
@@ -35,7 +35,7 @@
         </header>
         <section class="contacto">
             <div class="intro_contacto">
-                <h2>Póngase en contacto con nosotros</h2>
+                <h2>Contactate con nosotros</h2>
             </div>
             <div class="conteiner_contacto">   
                 <div class="card">
@@ -58,8 +58,8 @@
         </section>
         <section class="mensaje_intro">
             <div class="conteiner_mensaje">
-                <h2>Contáctenos</h2>
-                <p>Si deseas consultar mayor información sobre nuestros servicios o tenés alguna duda al respecto, no dudes en solicitar una consultoria gratuita y uno de nuestros asesores se contactará en la brevedad.</p>
+                <h2>Contactanos</h2>
+                <p>Si deseas obtener mayor información sobre nuestros servicios o tenés alguna duda al respecto, no dudes en solicitar una consultoria gratuita. Uno de nuestros asesores se contactará en la brevedad.</p>
             </div>
         </section>
         <section class="formulario">
@@ -67,7 +67,7 @@
                 <input type="text" name="text" placeholder="Nombre">
                 <input type="text" name="text" placeholder="Apellido" >
                 <input type="email" name="email" placeholder="Email">
-                <textarea name="mensaje" cols="30" rows="10" placeholder="Escriba aquí su mensaje"></textarea>
+                <textarea name="mensaje" cols="30" rows="10" placeholder="Escribí aca tu mensaje"></textarea>
                 <input type="button" value="Enviar" class="formulario_boton">
              </form>
         </section>
