correccion de CP Cultivos en index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./imagenes/cplogo.ico">
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <title>CP Cultivos</title>
+    <title>CP Cultivo</title>
 </head>
 <body>
     <div class="conteiner_gral">
@@ -20,7 +20,7 @@
                 </label>
                 <a href="./index.html" class="enlace">
                     <img src="./imagenes/cplogo.png" alt="cplogo" class="logo">
-                    <p>CP Cultivos</p>
+                    <p>CP Cultivo</p>
                 </a>
                 <ul>
                     <li><a class="active" href="./index.html">Inicio</a></li>
@@ -100,7 +100,7 @@
             </div>  
         </section>
         <footer class="footer">
-            <p>© 2022 - CP Cultivos</p>
+            <p>© 2022 - CP Cultivo</p>
             <p>Términos Generales y Condiciones</p>
             <p>Políticas de Privacidad</p>
             <p>Cookies</p>
