--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./imagenes/cplogo.ico">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="estilos2.css">
-    <title>CP Cultivos</title>
+    <title>CP Cultivo</title>
 </head>
 <body>
     <div class="conteiner_gral">
@@ -19,7 +19,7 @@
                 </label>
                 <a href="./index.html" class="enlace">
                     <img src="./imagenes/cplogo.png" alt="cplogo" class="logo">
-                    <p>CP Cultivos</p>
+                    <p>CP Cultivo</p>
                 </a>
                 <ul>
                     <li><a class="active" href="./index.html">Inicio</a></li>
@@ -74,7 +74,7 @@
             </div>
         </div>
         <footer class="footer">
-            <p>© 2022 - CP Cultivos</p>
+            <p>© 2022 - CP Cultivo</p>
             <p>Términos Generales y Condiciones</p>
             <p>Políticas de Privacidad</p>
             <p>Cookies</p>
