--- a/index4.html
+++ b/index4.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./imagenes/cplogo.ico">
     <link rel="stylesheet" href="estilos4.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <title>CP Cultivos</title>
+    <title>CP Cultivo</title>
 </head>
 <body>
     <div class="conteiner_gral">
@@ -20,7 +20,7 @@
                 </label>
                 <a href="./index.html" class="enlace">
                     <img src="./imagenes/cplogo.png" alt="cplogo" class="logo">
-                    <p>CP Cultivos</p>
+                    <p>CP Cultivo</p>
                 </a>
                 <ul>
                     <li><a class="active" href="./index.html">Inicio</a></li>
@@ -75,7 +75,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24805.96227419296!2d-58.47075805913013!3d-34.57569978798528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d406f9d56b%3A0xd61b95ee544f4c80!2sPadelnetwork.com%20Sucursal%20Belgrano!5e0!3m2!1ses!2sar!4v1655071040893!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <footer class="footer">
-            <p>© 2022 - CP Cultivos</p>
+            <p>© 2022 - CP Cultivo</p>
             <p>Términos Generales y Condiciones</p>
             <p>Políticas de Privacidad</p>
             <p>Cookies</p>
